@@ -660,13 +660,8 @@ instr_parse(
                 data_offset += param->value.s.length;
 
                 if (format[i] == 'c') {
-                    size_t outsize;
                     util_xor((unsigned char*)param->value.s.data,
                         param->value.s.length, 0x77, 7, 16);
-                    param->value.s.data = (char*)util_iconv(
-                        "UTF-8", "CP932",
-                        (unsigned char*)param->value.s.data,
-                        param->value.s.length, &outsize);
                 }
             } else if (format[i] == 'D') {
                 if (data_offset + 4 > rinstr->data_size) {
